setup/ingress_ns_role.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
