setup/secure_ns_role.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: secure
#---
#apiVersion: rbac.authorization.k8s.io/v1
#kind: RoleBinding
#metadata:
#  name: psp:secure:restricted
#  namespace: secure
#roleRef:
#  apiGroup: rbac.authorization.k8s.io
#  kind: ClusterRole
#  name: psp:restricted
#subjects:
#- kind: Group
#  name: system:serviceaccounts
#  apiGroup: rbac.authorization.k8s.io
